kube/db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricardo-web-db-dep
  namespace: ricardo-telem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ricardo-web-db
  template:
    metadata:
      labels:
        app: ricardo-web-db
    spec:
      volumes:
      - name: my-db-data
        persistentVolumeClaim:
          claimName: ricardo-web-db-pvc
      - name: schema-init
        configMap:
          name: ricardo-web-schema-sql
      containers:
      - name: db
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: my-db-data
        - mountPath: /docker-entrypoint-schemadb.d/schema.sql
          subPath: db-schema.sql
          name: schema-init
        image: postgres:16
        ports:
        - containerPort: 5432
