kube/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricardo-web
  namespace: ricardo-telem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ricardo-web
  template:
    metadata:
      labels:
        app: ricardo-web
    spec:
      containers:
      - name: web
        image: happystar91/running-docker-kubernetes:$BUILD_NUMBER
        ports:
        - containerPort: 8080
