kube/aspire-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aspire-svc
  namespace: ricardo-telem
spec:
  selector:
    app: aspire-dep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: ClusterIP
