kube/prometheus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: ricardo-telem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
          readOnly: true
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: ricardo-telem
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
