kube/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: ricardo-telem
spec:
  selector:
    app: prometheus-svc
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
