kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ricardo-telem
spec:
  selector:
    app: web-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50
  type: ClusterIP
