kube/aspire-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ricardo-web-aspire-ingress
  namespace: ricardo-telem
spec:
  rules:
  - host: duckdnsurl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ricardo-aspire-svc
            port:
              number: 5000
