kube/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ricardo-web-prometheus-ingress
  namespace: ricardo-telem
spec:
  rules:
  - host: ricardoprom.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ricardo-web-prometheus
            port:
              number: 9090
