kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ricardo-web-ingress
  namespace: ricardo-telem
spec:
  rules:
  - host: ricardoruiz.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
